# jadeterm

./: README.md  pyproject.toml  sh.jaiden.Jadeterm.yml
data/: default-config.yaml  sh.jaiden.Jadeterm.desktop  sh.jaiden.Jadeterm.metainfo.xml
data/themes/: adwaita-dark.yaml  adwaita.yaml  breeze-dark.yaml  breeze.yaml  hec.yaml  jade.yaml  june-dark.yaml  june.yaml  katie-dark.yaml  katie.yaml  lea.yaml  owen.yaml  solarized-dark.yaml  solarized.yaml
src/: bell.py  config.py  main.py  paths.py  tab.py  terminal.py  theme.py  window.py
