[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jadeterm"
dynamic = ["version"]
requires-python = ">=3.11"

[project.scripts]
jadeterm = "jadeterm.main:main"

[tool.setuptools.dynamic]
version = {attr = "jadeterm.__version__"}

[tool.setuptools]
packages = ["jadeterm"]

[tool.setuptools.package-dir]
"jadeterm" = "src"
